--- a/_config.yml
+++ b/_config.yml
@@ -18,24 +18,24 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : # the base hostname & protocol for your site e.g. https://www.someone.com
+url     : https://www.techforgeeks.co.uk
 baseurl : # does not include hostname
-title   : Your Site Title
+title   : All about Tech for Geeks
 description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+  This is a blog site for techies
 
 
 ## => Language and Timezone
 ##############################
-lang: # the language of your site, default as "en"
+lang:  "en"
 timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
 
 
 ## => Author and Social
 ##############################
 author:
-  type      : # "person" (default), "organization"
-  name      : Your Name
+  type      :  "person"
+  name      : Sonia Joseph
   url       :
   avatar    : # path or url of avatar image (square)
   bio       : I am an amazing person.
